--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,11 @@ on:
     branches: [main]
 
 jobs:
-  build-and-test:
-    name: Lint, Build & Test
+  install-deps:
+    name: Install Dependencies
     runs-on: ubuntu-latest
-    env:
-      COMMUNITY_DRAGON_API_URL: https://raw.communitydragon.org/latest/plugins/rcp-be-lol-game-data/global/default
-
+    outputs:
+      cache-hit: ${{ steps.cache-deps.outputs.cache-hit }}
     steps:
       - name: 🛎️ Checkout repository
         uses: actions/checkout@v6
@@ -20,11 +19,42 @@ jobs:
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: "20"
+          node-version: "24"
           cache: "yarn"
 
+      - name: 📦 Cache Yarn
+        id: cache-deps
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            **/.yarn/cache
+          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
       - name: 📦 Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
+
+  lint-build:
+    name: Lint & Build
+    runs-on: ubuntu-latest
+    needs: install-deps
+    steps:
+      - name: 🛎️ Checkout repository
+        uses: actions/checkout@v6
+
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: "24"
+          cache: "yarn"
+
+      - name: 📦 Restore Yarn cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            **/.yarn/cache
+          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: 🧹 Run linter (back)
         run: yarn workspace lol-metrics-back lint
@@ -34,6 +64,44 @@ jobs:
 
       - name: 🏗️ Build backend
         run: yarn workspace lol-metrics-back build
+
+  audit:
+    name: Security Audit (Yarn)
+    runs-on: ubuntu-latest
+    needs: install-deps
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
+        with:
+          node-version: "24"
+
+      - name: 🔍 Audit backend dependencies
+        run: yarn workspace lol-metrics-back audit --level high
+
+      - name: 🔍 Audit frontend dependencies
+        run: yarn workspace lol-metrics-view audit --level high
+
+  unit-tests:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: install-deps
+    steps:
+      - name: 🛎️ Checkout repository
+        uses: actions/checkout@v6
+
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: "24"
+          cache: "yarn"
+
+      - name: 📦 Restore Yarn cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            **/.yarn/cache
+          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
       - name: 🧪 Run backend unit tests
         run: yarn workspace lol-metrics-back test
